<resources>
    <string name="app_name">Anonymous Messenger</string>
    <string name="create_account_button">Start</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_error">Invalid Nickname</string>
    <string name="nickname_help">Enter Nickname to continue</string>
    <string name="nickname_okay">Nice Nickname!</string>
    <string name="next_button">Next</string>
    <string name="choose_password">Choose Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="setup_password_explanation">The password you enter will be used to encrypt data on your device, this is not a login password and cannot be used for recovery, you will have to enter your password later when you open the app after exiting it, this app never connects to any servers.</string>
    <string name="password_too_weak">Your password is too weak, we can\'t allow you to do this because we care about your security</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="channel4">channel4</string>
    <string name="channel_description">this and that</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password">Enter password</string>
    <string name="decrypt_button">Decrypt</string>
    <string name="myaddress">My Address</string>
    <string name="hint_contact_address">Enter Contact Address (.onion)</string>
    <string name="lbl_contact_address">Enter Contact Address</string>
    <string name="enter_message">Secure message…</string>
    <string name="send_button">SEND</string>
    <string name="reply">Reply</string>
    <string name="pin">Pin</string>
    <string name="copy">Copy</string>
    <string name="you">you</string>
    <string name="action_reset_session">Reset Session</string>
    <string name="action_verify_identity">Verify Identity</string>
    <string name="action_clear_conversation">Clear Conversation</string>
    <string name="action_search">Search</string>
    <string name="action_shutdown">Shutdown</string>
    <string name="action_my_identity">My Identity</string>
    <string name="action_restart_tor">Restart Tor</string>
    <string name="my_identity_explanation">Public key used to verify identity</string>
    <string name="verify_identity_explanation">Both public keys together to verify both identities</string>
    <string name="verify_identity_how_to">Compare these numbers on both devices, if they were the same then E2E encryption is working correctly…</string>
    <string name="action_call">Call</string>
    <string name="ask_me_again">Ask again</string>
    <string name="no_thanks">No thanks</string>
    <string name="why_need_mic">the app needs this in order to make or receive calls</string>
    <string name="mic_perm_ask_title">Microphone Permission</string>
    <string name="ask_for_mic_btn">OK</string>
    <string name="accept_call">Accept</string>
    <string name="dx_call">TOR CALL</string>
    <string name="call_picture_description">call screen picture</string>
    <string name="end_call">Hang up</string>
    <string name="connecting">Connecting…</string>
    <string name="CallNotificationBuilder_connecting">Connecting</string>
    <string name="NotificationBarManager__incoming_call">Incoming Call</string>
    <string name="NotificationBarManager_call_in_progress">Call in progress</string>
    <string name="NotificationBarManager__establishing_call">Establishing Call</string>
    <string name="trying">trying</string>
    <string name="ringing">Ringing</string>
    <string name="connected">Connected</string>
    <string name="answer">answer</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="identity_verification_fail">Couldn\'t fetch identity keys</string>
    <string name="identity_key_fail">Can\'t find your identity key</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="no_contacts">No Contacts Found!</string>
    <string name="tor_output">Tor Output</string>
    <string name="anonymous_messenger">Anonymous Messenger</string>
    <string name="by_drxtreme">by DrXtreme</string>
    <string name="welcome_to">welcome to</string>
    <string name="recording">Recording</string>
    <string name="send">SEND</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="to_show_when_it_is_unread">to show when it is unread</string>
    <string name="text_msg_placeholder">dude forgot to remind you about that thing over there</string>
    <string name="profile_image">profile image</string>
    <string name="really_long_word">sfsdfdgsdhfdghfdghfghfghghsdfgdfghdfghdsfgdfgdfgsdfgfds</string>
    <string name="time_passed_placeholder">31m</string>
    <string name="seen_image">seen image</string>
    <string name="msg_place_holder">hi man, how are you?</string>
    <string name="indicates_secure_messaging">indicates secure messaging</string>
    <string name="textview">TextView</string>
    <string name="john_doe">John Doe</string>
    <string name="hi_man_how_are_you">hi man, how are you?</string>
    <string name="time_placeholder" translatable="false">11:40</string>
    <string name="offline">offline</string>
    <string name="picture_of_contact">picture of contact</string>
    <string name="hold_on">Hold on!</string>
    <string name="starting_up_tor">Starting Tor</string>
    <string name="doing_stuff">making you anonymous…</string>
    <string name="go_to_contacts">Skip</string>
    <string name="checking">Checking</string>
    <string name="online">online</string>
    <string name="synced">synced</string>
    <string name="add_contact">Add Contact</string>
    <string name="waiting_for_tor">waiting for Tor</string>
    <string name="oh_no">Oh No!</string>
    <string name="did_you_forget_your_password">Did you forget your password?</string>
    <string name="hello_hello" translatable="false">hello, hello!</string>
    <string name="_11_40" translatable="false">11:40</string>
    <string name="crash_message">Anonymous Messenger: you are out of RAM !</string>
    <string name="no_encryption_yet">Not ready for encryption yet</string>
    <string name="no_session">Session doesn\'t exist, starting session now</string>
    <string name="audio_message">audio message</string>
    <string name="user_is_online">User is online</string>
    <string name="user_is_offline">User is offline</string>
    <string name="cant_encrypt_message">Couldn\'t encrypt message, you have to wait for key exchange</string>
    <string name="resp_key_exchange">Response Key Exchange Message</string>
    <string name="key_exchange_message">Key Exchange Message</string>
    <string name="image_to_send">image to send</string>
    <string name="read_storage_perm_ask_title">Read Storage Permission</string>
    <string name="why_need_read_storage">the app needs this to be able to send images
        stored on your phone</string>
    <string name="icon_for_image_to_send">icon for image to send</string>
    <string name="image">image</string>
    <string name="pic_help">Close</string>
    <string name="send_media_to">"Send Media to "</string>
    <string name="picure_view">Image View</string>
    <string name="media_message">media message</string>
    <string name="caption">Caption this</string>
    <string name="still_background">Still running in background</string>
    <string name="click_to_hide">Hide notification</string>
    <string name="unpin">Unpin</string>
    <string name="profile_contact">View Profile</string>
    <string name="save_picture">Save Picture</string>
    <string name="confirm_add_contact">\"Do you really want to add \"</string>
    <string name="contact_exists">Contact already exists!</string>
    <string name="cant_add_contact">can\'t add contact!</string>
    <string name="save_to_storage">Save to shared storage ?</string>
    <string name="save_to_storage_explain">Other apps will have access to this image if saved on shared storage.</string>
    <string name="action_my_profile">My Profile</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="change_nickname">Change Nickname</string>
    <string name="new_nickname">New Nickname</string>
    <string name="confirm">Confirm</string>
    <string name="action_license">License</string>
    <string name="license">
        Anonymous Messenger, a full private communications solution that works over Tor.\n
    Copyright © 2021  Sofian M. Benissa\n\n

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.\n

    This program is distributed in the hope that it will be useful,\n
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.\n

    You should have received a copy of the GNU General Public License
        along with this program.  If not, see https://www.gnu.org/licenses .</string>
    <string name="copied_address">Copied address</string>
    <string name="empty_nickname_help">Can\'t have an empty nickname</string>
    <string name="theiraddress">Their Address</string>
    <string name="turn_off_battery">Turn off battery optimization?</string>
    <string name="allow_in_background">allow Anonymous Messenger to keep working in the background?</string>
    <string name="shut_app">Shutdown app?</string>
    <string name="shut_app_explain">You won\'t be able to receive messages until you decrypt with your password again</string>
    <string name="restart_tor">Restart Tor?</string>
    <string name="restart_tor_explain">This should not be needed in normal operation unless you think Tor isn\'t working properly right now</string>
    <string name="restarting_service">Restarting service</string>
    <string name="connection_restored">Connection Restored</string>
    <string name="lost_connection">Lost Connection</string>
    <string name="connection_is_coming">connection should be back soon</string>
    <string name="will_receive_messages_soon">should be able to receive messages within 2 minutes</string>
    <string name="waiting_for_connectivity">waiting for connectivity</string>
    <string name="about">A project funded by Alton James Steele and developed by Sofian Mahmoud
        Benissa
        to bring anonymous secure and convenient
        messaging to you, as we were not satisfied by what was available we decided to
        create our own idea of a messaging application and share it with the world, source code
        is available and the project is licensed under the GNU General Public License so you can
        take full advantage of it and have the freedom to change it among other
        freedoms</string>
    <string name="copyright">Copyright © 2021 Sofian M. Benissa</string>
    <string name="action_tips">Security Tips</string>
    <string name="send_file">send file</string>
    <string name="action_notepad">Notepad</string>
    <string name="action_log">Security Log</string>
    <string name="action_log_notice">Include Notice</string>
    <string name="action_clear_log">Clear Log</string>
    <string name="action_scroll_up">Scroll up</string>
    <string name="action_scroll_down">Scroll down</string>
    <string name="private_messaging_reimagined">Speak Freely, Stay Anonymous</string>
    <string name="private_secure_anonymous"> Privacy • Encryption • Anonymity</string>
    <string name="start_private_messaging">JOIN NOW</string>
    <string name="already_have_account">Use BACKUP</string>
    <string name="tor_network">⚡ Tor Network</string>
    <string name="peer_2_peer">🌐 Peer 2 Peer</string>
    <string name="anonymous">🕵️ Anonymous</string>
    <string name="encrypted">🔒 Encrypted</string>
</resources>