<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_my_identity"
        android:title="@string/action_my_identity"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_my_profile"
        android:title="@string/action_my_profile"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_notepad"
        android:title="@string/action_notepad"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tips"
        android:title="@string/action_tips"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log"
        android:title="@string/action_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_license"
        android:title="@string/action_license"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_restart_tor"
        android:title="@string/action_restart_tor"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_shutdown"
        android:title="@string/action_shutdown"
        app:showAsAction="never"/>
</menu>