<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_scroll_up"
        android:title="@string/action_scroll_up"
        android:icon="@drawable/ic_baseline_keyboard_arrow_up_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_scroll_down"
        android:title="@string/action_scroll_down"
        android:icon="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_log_notice"
        android:title="@string/action_log_notice"
        android:checkable="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clear_log"
        android:title="@string/action_clear_log"
        app:showAsAction="never"/>
</menu>