<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_dark"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_holder"
                android:layout_width="30dp"
                android:layout_height="19dp"
                android:contentDescription="@string/image_to_send"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_message_body"
                app:srcCompat="@drawable/ic_baseline_attach_file_24" />

            <ImageView
                android:id="@+id/img_seen"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/seen_image"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_holder"
                app:srcCompat="@android:drawable/ic_lock_lock" />

            <TextView
                android:id="@+id/text_message_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rectangle_dark"
                android:maxWidth="240dp"
                android:padding="8dp"
                android:text="@string/hello_hello"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:autoLink="all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_message_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11_40"
                android:textColor="#ffffff"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/img_seen"
                app:layout_constraintTop_toBottomOf="@+id/img_holder" />

            <TextView
                android:id="@+id/txt_filename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:maxLines="1"
                android:text="@string/send_file"
                app:layout_constraintBottom_toBottomOf="@+id/img_holder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_holder"
                app:layout_constraintTop_toTopOf="@+id/img_holder" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>





</androidx.constraintlayout.widget.ConstraintLayout>