<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/rounded_rectangle_steel"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_message_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rectangle_steel"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/john_doe"
                android:textColor="#ffffff"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/image_message_profile"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_message_profile"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="4dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_holder"
                android:layout_width="30dp"
                android:layout_height="19dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/image_to_send"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_message_profile"
                app:srcCompat="@drawable/ic_baseline_attach_file_24" />

            <ImageView
                android:id="@+id/img_seen2"
                android:layout_width="16dp"
                android:layout_height="19dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/indicates_secure_messaging"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_filename"
                app:srcCompat="@android:drawable/ic_lock_lock" />

            <TextView
                android:id="@+id/text_message_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/time_placeholder"
                android:textColor="#ffffff"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/img_seen2"
                app:layout_constraintTop_toBottomOf="@+id/txt_filename" />

            <TextView
                android:id="@+id/txt_filename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:maxLength="60"
                android:maxLines="2"
                android:text="@string/send_file"
                app:layout_constraintBottom_toBottomOf="@+id/img_holder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_holder"
                app:layout_constraintTop_toTopOf="@+id/img_holder" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/textViewOptions"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentTop="true"-->
    <!--        android:layout_alignParentRight="true"-->
    <!--        android:paddingLeft="@dimen/margin_activity_horizontal"-->
    <!--        android:text="&#8942;"-->
    <!--        android:textAppearance="?android:textAppearanceLarge"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>